--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@
 </head>
 <body>
     <div class="sofa">
-        <img src="./img/sofa.png" alt="sofa">
+        <img src="./img/image 2.png" alt="sofa">
     </div>
+    <section>
+    <div class="texto">
+        <span>CÓDIGO: 42404</span>
+        <h1>Sofá Margot II - Rosé</h1>
+        <h3>R$ 4.000 </h3>
+        <button class="bt">ADICIONAR À CESTA</button>
+    </div>
+    
+</section>
 </body>
 </html>
